# OperatingSystems

./: .gitignore  CMakeLists.txt  readme.md
01. Memory management. Libraries. Time measurement/: Makefile  main.c  mylib.c  mylib.h  readme.md
01. Memory management. Libraries. Time measurement/test_files/: d.txt
01. Memory management. Libraries. Time measurement/zad1/: Makefile  mylib.c  mylib.h
01. Memory management. Libraries. Time measurement/zad2/: Makefile  main.c
01. Memory management. Libraries. Time measurement/zad3/a/: Makefile  main.c  main_dynamic.c
01. Memory management. Libraries. Time measurement/zad3/b/: Makefile  main.c  main_dynamic.c
02. File system. File operations/zad1/: Makefile  main.c
02. File system. File operations/zad2/: main.c
02. File system. File operations/zad2/a/: Makefile  main.c
02. File system. File operations/zad2/b/: main.c
03. Creating processes. Process environment, process control/: readme.md
03. Creating processes. Process environment, process control/zad1/: main.c
03. Creating processes. Process environment, process control/zad2/: Makefile  helper.c  main.c  matrix_generator.c  matrix_multiplier.c
03. Creating processes. Process environment, process control/zad3/: main.c
04. Signals/: readme.md
04. Signals/zad1/: main.c
04. Signals/zad2/: Makefile  main.c
04. Signals/zad3/: Makefile  main.c
04. Signals/zad4/a/: Makefile  catcher.c  sender.c
04. Signals/zad4/b/: catcher.c  sender.c
05. Inter-process communication(pipeline)/: readme.md
05. Inter-process communication(pipeline)/zad1/: main.c
05. Inter-process communication(pipeline)/zad2/: Makefile  main.c
05. Inter-process communication(pipeline)/zad3/: Makefile  konsument.c
06. Inter-process communication(queue message)/: readme.md
06. Inter-process communication(queue message)/zad1/: client.c  commands.h  server.c
06. Inter-process communication(queue message)/zad2/: client.c  commands.h
cw01/: readme.md
cw01/zad1/: Makefile
cw01/zad2/: main.c
cw01/zad3/a/: Makefile  main_dynamic.c
cw01/zad3/b/: Makefile  main.c  main_dynamic.c
cw02/zad2/b/: main.c
cw03/: readme.md
cw03/zad1/: Makefile
cw03/zad2/: matrix_multiplier.c
cw03/zad3/: Makefile
cw04/zad1/: Makefile
cw04/zad2/: exec_helper.c
cw04/zad4/b/: sender.c
cw05/zad1/: main.c
cw05/zad2/: main.c
cw05/zad3/: Makefile  helper.c  producent.c
cw06/: readme.md
cw06/zad1/: Makefile  client.c  server.c
cw06/zad2/: Makefile  server.c
cw07/: readme.md
cw07/zad1/: Makefile  commands.h  first.c  manager.c  second.c  third.c  worker1.c  worker2.c  worker3.c
cw07/zad2/: Makefile  commands.h  manager.c  worker1.c  worker2.c  worker3.c
cw08/: readme.md
cw08/zad1/: Makefile  main.c
cw09/: readme.md
cw09/zad1/: Makefile  main.c
cw10/: readme.md
cw10/zad1/: Makefile  client.c  game.c  server.c
cw10/zad2/: client.c  server.c
