cmake_minimum_required(VERSION 3.5)
project(OperatingSystems)

set(CMAKE_C_STANDARD 11)

add_executable(cw02_zad1 "cw02/zad1/main.c")
add_executable(cw02_zad2a "cw02/zad2/a/main.c")
add_executable(cw02_zad2b "cw02/zad2/b/main.c")
add_executable(cw03_zad1 "cw03/zad1/main.c")
add_executable(cw03_zad2 "cw03/zad2/main.c")
add_executable(cw03_zad2_helper "cw03/zad2/helper.c")
add_executable(cw03_zad3 "cw03/zad3/main.c")
add_executable(cw04_zad1 "cw04/zad1/main.c")
add_executable(cw04_zad2 "cw04/zad2/main.c")
add_executable(cw04_zad2_helper "cw04/zad2/exec_helper.c")
add_executable(cw04_zad3 "cw04/zad3/main.c")
add_executable(cw04_zad4_a_sender "cw04/zad4/a/sender.c")
add_executable(cw04_zad4_a_catcher "cw04/zad4/a/catcher.c")
add_executable(cw04_zad4_b_sender "cw04/zad4/b/sender.c")
add_executable(cw04_zad4_b_catcher "cw04/zad4/b/catcher.c")
add_executable(cw05_zad1 "cw05/zad1/main.c")
add_executable(cw05_zad2 "cw05/zad2/main.c")
add_executable(cw05_zad3_producent "cw05/zad3/producent.c")
add_executable(cw05_zad3_konsument "cw05/zad3/konsument.c")
add_executable(cw05_zad3_helper "cw05/zad3/helper.c")
add_executable(cw06_zad2_client "cw06/zad1/client.c" "cw06/zad1/commands.h")
add_executable(cw06_zad2_server "cw06/zad1/server.c" "cw06/zad1/commands.h")
add_executable(cw06_zad1_client "cw06/zad2/client.c" "cw06/zad2/commands.h")
add_executable(cw06_zad1_server "cw06/zad2/server.c" "cw06/zad2/commands.h")
add_executable(cw07_zad1_manager "cw07/zad1/manager.c" "cw07/zad1/commands.h")
add_executable(cw07_zad1_worker1 "cw07/zad1/worker1.c" "cw07/zad1/commands.h")
add_executable(cw07_zad1_worker2 "cw07/zad1/worker2.c" "cw07/zad1/commands.h")
add_executable(cw07_zad1_worker3 "cw07/zad1/worker3.c" "cw07/zad1/commands.h")
add_executable(cw07_zad2_manager "cw07/zad2/manager.c" "cw07/zad2/commands.h")
add_executable(cw07_zad2_worker1 "cw07/zad2/worker1.c" "cw07/zad2/commands.h")
add_executable(cw07_zad2_worker2 "cw07/zad2/worker2.c" "cw07/zad2/commands.h")
add_executable(cw07_zad2_worker3 "cw07/zad2/worker3.c" "cw07/zad2/commands.h")
add_executable(cw08_zad1 "cw08/zad1/main.c")
add_executable(cw09_zad1 "cw09/zad1/main.c")
add_executable(cw10_zad1_client "cw10/zad1/client.c" cw10/zad1/game.c)
add_executable(cw10_zad1_server "cw10/zad1/server.c" cw10/zad1/game.c)
add_executable(cw10_zad2_client "cw10/zad2/client.c" cw10/zad1/game.c)
add_executable(cw10_zad2_server "cw10/zad2/server.c" cw10/zad1/game.c)

target_link_libraries(cw06_zad1_client rt)
target_link_libraries(cw06_zad1_server rt)
target_link_libraries(cw07_zad2_manager rt pthread)
target_link_libraries(cw07_zad2_worker1 rt pthread)
target_link_libraries(cw07_zad2_worker2 rt pthread)
target_link_libraries(cw07_zad2_worker3 rt pthread)
target_link_libraries(cw08_zad1 m pthread)
add_library(cw03_zad2_lib  "cw03/zad2/matrix_multiplier.c")